--- a/Draw/Controller/Feed/FeedDetail/UserInfoCell~ipad.xib
+++ b/Draw/Controller/Feed/FeedDetail/UserInfoCell~ipad.xib
@@ -42,8 +42,8 @@
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUILabel" id="781311575">
 								<reference key="NSNextResponder" ref="895739986"/>
-								<int key="NSvFlags">301</int>
-								<string key="NSFrame">{{76, 15}, {185, 30}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{184, 39}, {444, 76}}</string>
 								<reference key="NSSuperview" ref="895739986"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1050053940"/>
@@ -62,20 +62,21 @@
 								<float key="IBUIMinimumFontSize">10</float>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">2</int>
-									<double key="pointSize">16</double>
+									<double key="pointSize">32</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">16</double>
+									<double key="NSSize">32</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUIView" id="1050053940">
 								<reference key="NSNextResponder" ref="895739986"/>
-								<int key="NSvFlags">268</int>
-								<string key="NSFrame">{{0, 59}, {302, 1}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{0, 149}, {724, 3}}</string>
 								<reference key="NSSuperview" ref="895739986"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">10</int>
 									<object class="NSImage" key="NSImage">
@@ -139,8 +140,8 @@ AAgACAAIAAEAAQABAAE</bytes>
 							</object>
 							<object class="IBUIView" id="361712317">
 								<reference key="NSNextResponder" ref="895739986"/>
-								<int key="NSvFlags">301</int>
-								<string key="NSFrame">{{11, 7}, {45, 45}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{28, 19}, {109, 115}}</string>
 								<reference key="NSSuperview" ref="895739986"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="781311575"/>
@@ -154,7 +155,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</array>
-						<string key="NSFrameSize">{302, 59}</string>
+						<string key="NSFrameSize">{724, 149}</string>
 						<reference key="NSSuperview" ref="208556046"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="361712317"/>
@@ -166,7 +167,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{302, 60}</string>
+				<string key="NSFrameSize">{724, 150}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="895739986"/>
